syntax = "proto3";
package snapchat.messaging;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SCMessaging";
option csharp_namespace = "SnapProto.Snapchat.Messaging";
option java_package = "com.snapchat.messaging.messages";
option java_multiple_files = true;
option go_package = "messaging";

import "schema/common/uuid.proto";
import "schema/messages/encryption.proto";
import "ranking/core/proto/story_destination.proto";

message DeliveryDestination {
    .snapchat.messaging.EncryptionInfo encryption_information = 99;
    .snapchat.messaging.ConversationDestination conversation_destination = 1;
    .snapchat.messaging.StoryDestination story_destination = 2;
}

message ConversationDestination {
    .snapchat.messaging.UUID id = 1;
    uint64 current_version = 2;
}

message StoryDestination {
    .snapchat.messaging.UUID story_destination_id = 1;
    .ranking.core.StoryPostDestinationMetadata destination_metadata = 2;
}